--- a/index.html
+++ b/index.html
@@ -1,144 +1,206 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="no-js">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aswamedia - Jasa Pembuatan Aplikasi</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Aswa Media</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,600" rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/style.css">
+	<script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
+<body class="is-boxed has-animations">
+    <div class="body-wrap">
+        <header class="site-header">
+            <div class="container">
+                <div class="site-header-inner">
+                    <div class="brand header-brand">
+                        <h1 class="m-0">
+							<a href="#">
+								<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+                            </a>
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-<body>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Aswamedia</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#services">Layanan</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portofolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Kontak</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">Jasa Pembuatan Aplikasi Terbaik</h1>
-        <p class="lead">Tim profesional kami siap membantu Anda mengembangkan aplikasi kustom sesuai kebutuhan bisnis
-          Anda.</p>
-        <a href="#contact" class="btn btn-primary btn-lg">Hubungi Kami</a>
-      </div>
+        <main>
+            <section class="hero">
+                <div class="container">
+                    <div class="hero-inner">
+						<div class="hero-copy">
+	                        <h1 class="hero-title mt-0">Jasa Pembuatan Aplikasi Termurah</h1>
+	                        <p class="hero-paragraph">Tim kami siap membantu Anda mengembangkan aplikasi sesuai kebutuhan bisnis Anda.</p>
+	                        <div class="hero-cta"><a class="button button-primary" href="https://kirimwa.id/081229206922">Hubungi Kami</a><a class="button" href="#">Get in touch</a></div>
+						</div>
+						<div class="hero-figure anime-element">
+							<svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
+								<rect width="528" height="396" style="fill:transparent;" />
+							</svg>
+							<div class="hero-figure-box hero-figure-box-01" data-rotation="45deg"></div>
+							<div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg"></div>
+							<div class="hero-figure-box hero-figure-box-03" data-rotation="0deg"></div>
+							<div class="hero-figure-box hero-figure-box-04" data-rotation="-135deg"></div>
+							<div class="hero-figure-box hero-figure-box-05"></div>
+							<div class="hero-figure-box hero-figure-box-06"></div>
+							<div class="hero-figure-box hero-figure-box-07"></div>
+							<div class="hero-figure-box hero-figure-box-08" data-rotation="-22deg"></div>
+							<div class="hero-figure-box hero-figure-box-09" data-rotation="-52deg"></div>
+							<div class="hero-figure-box hero-figure-box-10" data-rotation="-50deg"></div>
+						</div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="features section">
+                <div class="container">
+					<div class="features-inner section-inner has-bottom-divider">
+                        <div class="features-wrap">
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img src="dist/images/feature-icon-01.svg" alt="Feature 01">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Aplikasi Web</h4>
+                                    <p class="text-sm mb-0">Kami menyediakan solusi pengembangan aplikasi web dengan teknologi terbaru untuk memenuhi kebutuhan bisnis Anda.</p>
+                                </div>
+                            </div>
+							<div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img src="dist/images/feature-icon-02.svg" alt="Feature 02">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Aplikasi Desktop</h4>
+                                    <p class="text-sm mb-0">Kami memiliki keahlian dalam pengembangan aplikasi desktop lintas platform yang responsif dan andal.</p>
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img src="dist/images/feature-icon-03.svg" alt="Feature 03">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Aplikasi Mobile</h4>
+                                    <p class="text-sm mb-0">Kami mengembangkan aplikasi mobile untuk iOS dan Android dengan desain yang menarik dan fungsionalitas yang kuat.</p>
+                                </div>
+                            </div>
+                            <div class="feature text-center is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+										<img src="dist/images/feature-icon-04.svg" alt="Feature 04">
+                                    </div>
+                                    <h4 class="feature-title mt-24">Jasa Bimbingan Skripsi</h4>
+                                    <p class="text-sm mb-0">Jasa Pembuatan Skripsi / Thesis / Tugas Akhir Teknik Informatika, Sistem Informasi, Manajemen Informasi, Teknologi Informasi, Sistem Komputer.</p>
+                                </div>
+                            </div>
+							
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="pricing section">
+                <div class="container-sm">
+                    <div class="pricing-inner section-inner">
+                        <div class="pricing-header text-center">
+                            <h2 class="section-title mt-0">Berapa Biayanya?</h2>
+                            <p class="section-paragraph mb-0">Biaya pembuatan aplikasi bermacam-macam sesuai kebutuhan anda, mulai dari 500 ribu rupiah. Khusus bimbingan skripsi support 24/7.</p>
+                        </div>
+						<!-- <div class="pricing-tables-wrap">
+                            <div class="pricing-table">
+                                <div class="pricing-table-inner is-revealing">
+                                    <div class="pricing-table-main">
+                                        <div class="pricing-table-header pb-24">
+                                            <div class="pricing-table-price"><span class="pricing-table-price-currency h2">$</span><span class="pricing-table-price-amount h1">49</span><span class="text-xs">/month</span></div>
+                                        </div>
+										<div class="pricing-table-features-title text-xs pt-24 pb-24">What you will get</div>
+                                        <ul class="pricing-table-features list-reset text-xs">
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+                                            <li>
+                                                <span>Lorem ipsum dolor sit nisi</span>
+                                            </li>
+											<li>
+												<span>Lorem ipsum dolor sit nisi</span>
+											</li>
+                                        </ul>
+                                    </div>
+                                    <div class="pricing-table-cta mb-8">
+                                        <a class="button button-primary button-shadow button-block" href="#">Pre order now</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+            </section>
+
+			<section class="cta section">
+				<div class="container">
+					<div class="cta-inner section-inner">
+						<h3 class="section-title mt-0">Konsultasikan kebutuhan anda di sini</h3>
+						<div class="cta-cta">
+							<a class="button button-primary button-wide-mobile" href="https://kirimwa.id/081229206922">Hubungi Kami</a>
+						</div>
+					</div>
+				</div>
+			</section>
+        </main>
+
+        <footer class="site-footer">
+            <div class="container">
+                <div class="site-footer-inner">
+                    <div class="brand footer-brand">
+						<a href="#">
+							<img class="header-logo-image" src="dist/images/logo.svg" alt="Logo">
+						</a>
+                    </div>
+                    <ul class="footer-links list-reset">
+                        <li>
+                            <a href="https://kirimwa.id/081229206922">Contact</a>
+                        </li>
+                        <li>
+                            <a href="https://insanjabal.my.id">Blog</a>
+                        </li>
+                        
+                    </ul>
+                    <ul class="footer-social-links list-reset">
+                        <li>
+                            <a href="#">
+                                <span class="screen-reader-text">Facebook</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M6.023 16L6 9H3V6h3V4c0-2.7 1.672-4 4.08-4 1.153 0 2.144.086 2.433.124v2.821h-1.67c-1.31 0-1.563.623-1.563 1.536V6H13l-1 3H9.28v7H6.023z" fill="#0270D7"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="screen-reader-text">Twitter</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M16 3c-.6.3-1.2.4-1.9.5.7-.4 1.2-1 1.4-1.8-.6.4-1.3.6-2.1.8-.6-.6-1.5-1-2.4-1-1.7 0-3.2 1.5-3.2 3.3 0 .3 0 .5.1.7-2.7-.1-5.2-1.4-6.8-3.4-.3.5-.4 1-.4 1.7 0 1.1.6 2.1 1.5 2.7-.5 0-1-.2-1.5-.4C.7 7.7 1.8 9 3.3 9.3c-.3.1-.6.1-.9.1-.2 0-.4 0-.6-.1.4 1.3 1.6 2.3 3.1 2.3-1.1.9-2.5 1.4-4.1 1.4H0c1.5.9 3.2 1.5 5 1.5 6 0 9.3-5 9.3-9.3v-.4C15 4.3 15.6 3.7 16 3z" fill="#0270D7"/>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="screen-reader-text">Google</span>
+                                <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7.9 7v2.4H12c-.2 1-1.2 3-4 3-2.4 0-4.3-2-4.3-4.4 0-2.4 2-4.4 4.3-4.4 1.4 0 2.3.6 2.8 1.1l1.9-1.8C11.5 1.7 9.9 1 8 1 4.1 1 1 4.1 1 8s3.1 7 7 7c4 0 6.7-2.8 6.7-6.8 0-.5 0-.8-.1-1.2H7.9z" fill="#0270D7"/>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="footer-copyright">&copy; 2018 - <script>document.write(new Date().getFullYear())</script> Solid, all rights reserved</div>
+                </div>
+            </div>
+        </footer>
     </div>
-  </header>
 
-  <section id="services" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-5">Layanan Kami</h2>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="service1.png" class="card-img-top" alt="Service 1">
-            <div class="card-body">
-              <h3 class="card-title">Aplikasi Mobile</h3>
-              <p class="card-text">Kami mengembangkan aplikasi mobile untuk iOS dan Android dengan desain yang menarik
-                dan fungsionalitas yang kuat.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="service2.png" class="card-img-top" alt="Service 2">
-            <div class="card-body">
-              <h3 class="card-title">Aplikasi Web</h3>
-              <p class="card-text">Kami menyediakan solusi pengembangan aplikasi web dengan teknologi terbaru untuk
-                memenuhi kebutuhan bisnis Anda.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="service3.png" class="card-img-top" alt="Service 3">
-            <div class="card-body">
-              <h3 class="card-title">Aplikasi Desktop</h3>
-              <p class="card-text">Kami memiliki keahlian dalam pengembangan aplikasi desktop lintas platform yang
-                responsif dan andal.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="portfolio" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-5">Portofolio</h2>
-      <div class="row">
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="project1.png" class="card-img-top" alt="Project 1">
-            <div class="card-body">
-              <h3 class="card-title">Project 1</h3>
-              <p class="card-text">Deskripsi singkat mengenai proyek ini.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="project2.png" class="card-img-top" alt="Project 2">
-            <div class="card-body">
-              <h3 class="card-title">Project 2</h3>
-              <p class="card-text">Deskripsi singkat mengenai proyek ini.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 mb-4">
-          <div class="card">
-            <img src="project3.png" class="card-img-top" alt="Project 3">
-            <div class="card-body">
-              <h3 class="card-title">Project 3</h3>
-              <p class="card-text">Deskripsi singkat mengenai proyek ini.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center mb-5">Hubungi Kami</h2>
-      <form>
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Nama Anda" required>
-        </div>
-        <div class="form-group">
-          <input type="email" class="form-control" placeholder="Email Anda" required>
-        </div>
-        <div class="form-group">
-          <textarea class="form-control" rows="5" placeholder="Pesan Anda" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block">Kirim</button>
-      </form>
-    </div>
-  </section>
-
-  <footer class="py-3 bg-dark text-white text-center">
-    <div class="container">
-      <p>&copy; 2023 Aswamedia. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.
+    <script src="dist/js/main.min.js"></script>
+</body>
+</html>
